Fixed: small changes to improve usability/readability of control panel
-Control panel can be minimized and has auto width

--- a/partbookViewer.css
+++ b/partbookViewer.css
@@ -19,7 +19,7 @@ body, html{
 	max-height:50%;
 	max-width:33%;
 	height:auto;
-	width:calc(33% - 10px);
+	width:auto;
 	display:inline-block;
 	padding:5px;
 	border:thin black solid;
